# plane-panorama

./: CMakeLists.txt  README  README.md
cmake/: CAPGCMakeConfig.cmake  CAPGEnvCheck.cmake  CAPGLibsSupport.cmake  CAPGQtSupport.cmake  FindCAPGMath.cmake  FindGLEW.cmake  FindLevmar.cmake  FindOpenMesh.cmake  FindQGLViewer.cmake  disable_msvc_warnings.cmake  findcppunit.cmake
doc/: panaroma-degsin.doc
src/: CMakeLists.txt  conf.xml
src/app/: CMakeLists.txt  main.cpp
src/config/: config.h  config.h.cmake
src/imp/: CMakeLists.txt  CameraCalibrator.cpp  PolySelection.cpp  PolySelection.h  rex.cpp  rex.h
src/imp/ConfigurationManager/: JConfig.cpp  JConfig.h
